package com.example.first_app_version.data.models

data class User(
    val uid: String = "",
    val email: String = "",
    val firstName: String = "",
    val lastName: String = ""
)
